--- a/04_Prove_Assignment_Part3.ipynb
+++ b/04_Prove_Assignment_Part3.ipynb
@@ -6,7 +6,7 @@
       "name": "04 Prove : Assignment-Part3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMYX9veVxofIPmoFMxCJ9q+",
+      "authorship_tag": "ABX9TyOy50fGqBwGJRue5hOvMir7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "hgts61JP1dCs",
         "colab_type": "code",
-        "outputId": "a7eee9e0-acd2-4c64-9903-e1690f1aaa2e",
+        "outputId": "17609eda-20e0-4331-c103-6f3c1f14e119",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -59,15 +59,15 @@
         "\n",
         "file = files.upload()"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-8a808d9a-92a6-4cc1-b319-72251e243f00\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-8a808d9a-92a6-4cc1-b319-72251e243f00\">\n",
+              "     <input type=\"file\" id=\"files-3b2542fd-36fb-4299-ab80-10147e0fdb9c\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-3b2542fd-36fb-4299-ab80-10147e0fdb9c\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -84,7 +84,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving house-votes-84.data to house-votes-84 (2).data\n"
+            "Saving house-votes-84.data to house-votes-84.data\n"
           ],
           "name": "stdout"
         }
@@ -95,18 +95,18 @@
       "metadata": {
         "id": "1rGYLzpJ1ZJ6",
         "colab_type": "code",
+        "outputId": "7ab95844-b62b-4182-ca4b-a2b6e85d07a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
-        },
-        "outputId": "adb1d32e-4278-4d12-fc8d-feff153fb749"
+        }
       },
       "source": [
         "voter = pd.read_csv(\"house-votes-84.data\", na_values= [\"?\"], header= None, skipinitialspace= True)\n",
         "voter.columns = [i for i in range(1, 18)]\n",
         "voter.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +266,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 5
         }
       ]
     },
@@ -275,45 +275,45 @@
       "metadata": {
         "id": "vcZNr3R84bA5",
         "colab_type": "code",
-        "outputId": "7cbeb37a-2164-4bde-9a1b-85fa8e1daba6",
+        "outputId": "e2857227-21f0-49e1-9abb-7639304376ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 336
+          "height": 341
         }
       },
       "source": [
-        "voter.isna().sum(axis = 0)/100"
+        "voter.isna().sum(axis = 0)/voter.shape[0] * 100"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1     0.00\n",
-              "2     0.12\n",
-              "3     0.48\n",
-              "4     0.11\n",
-              "5     0.11\n",
-              "6     0.15\n",
-              "7     0.11\n",
-              "8     0.14\n",
-              "9     0.15\n",
-              "10    0.22\n",
-              "11    0.07\n",
-              "12    0.21\n",
-              "13    0.31\n",
-              "14    0.25\n",
-              "15    0.17\n",
-              "16    0.28\n",
-              "17    1.04\n",
+              "1      0.000000\n",
+              "2      2.758621\n",
+              "3     11.034483\n",
+              "4      2.528736\n",
+              "5      2.528736\n",
+              "6      3.448276\n",
+              "7      2.528736\n",
+              "8      3.218391\n",
+              "9      3.448276\n",
+              "10     5.057471\n",
+              "11     1.609195\n",
+              "12     4.827586\n",
+              "13     7.126437\n",
+              "14     5.747126\n",
+              "15     3.908046\n",
+              "16     6.436782\n",
+              "17    23.908046\n",
               "dtype: float64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 9
         }
       ]
     },
@@ -322,16 +322,16 @@
       "metadata": {
         "id": "UOf9yveiS6Iq",
         "colab_type": "code",
+        "outputId": "d11941cf-e3a4-4995-d466-102a8a72df9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 336
-        },
-        "outputId": "e8a98e57-8a07-4636-cbc5-a1f1a8d3a5bb"
+          "height": 341
+        }
       },
       "source": [
         "voter.dtypes"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +360,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 10
         }
       ]
     },
@@ -369,11 +369,11 @@
       "metadata": {
         "id": "QhMfqW_1VFmF",
         "colab_type": "code",
+        "outputId": "7a25b4e0-9675-46d4-f047-f7c3fc802191",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 336
-        },
-        "outputId": "1fe3d0cf-0ca3-4487-a578-7d46222d7428"
+          "height": 341
+        }
       },
       "source": [
         "from sklearn.impute import SimpleImputer\n",
@@ -384,7 +384,7 @@
         "\n",
         "voter.isna().sum(axis = 0)"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -413,7 +413,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 11
         }
       ]
     },
@@ -422,11 +422,11 @@
       "metadata": {
         "id": "lumZG7chTBE6",
         "colab_type": "code",
+        "outputId": "4e6d98cf-f1e0-4064-bccb-e6ab9295408c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
-        },
-        "outputId": "9b636335-4c87-40fa-b999-ee9bf4a1c447"
+          "height": 204
+        }
       },
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
@@ -437,7 +437,7 @@
         "\n",
         "voter.head()"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +597,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 12
         }
       ]
     },
@@ -625,11 +625,11 @@
       "metadata": {
         "id": "t64SotHCXajk",
         "colab_type": "code",
+        "outputId": "069777e4-46b7-4bb0-d7c9-d2a80f7fd506",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "b2f28aaf-2483-45a3-e1c9-8737152f6858"
+          "height": 35
+        }
       },
       "source": [
         "from sklearn.tree import DecisionTreeClassifier\n",
@@ -642,7 +642,7 @@
         "accuracy_score(y_test, predicted_y)\n",
         "# treeClassfier.score(X_test, y_test)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 32
         }
       ]
     },
@@ -663,16 +663,16 @@
       "metadata": {
         "id": "Q2wZf9XiX_nv",
         "colab_type": "code",
+        "outputId": "fef7eee6-965d-48e8-804e-305d28fa18a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 265
-        },
-        "outputId": "e83367de-46f6-44d3-aabb-3c5c3d6588d1"
+          "height": 269
+        }
       },
       "source": [
         "treeClassfier.get_params()"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +697,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 15
         }
       ]
     },
@@ -706,17 +706,17 @@
       "metadata": {
         "id": "12c57NL-YD0i",
         "colab_type": "code",
+        "outputId": "264e618f-0720-4dd4-d63f-115391228625",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "a528bc87-22e9-44a4-c1e7-380ee8448ec4"
+        }
       },
       "source": [
         "predict_y_proba = treeClassfier.predict_proba(X_test)\n",
         "predict_y_proba"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +858,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 33
         }
       ]
     },
@@ -867,20 +867,20 @@
       "metadata": {
         "id": "rytAWUmlYJX9",
         "colab_type": "code",
+        "outputId": "9d3b549e-26c8-4034-c4e6-0a27e6670fc1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "825e27b5-ce55-4728-9fb7-7587d8ee6eba"
+          "height": 35
+        }
       },
       "source": [
         "from sklearn.model_selection import cross_val_predict\n",
         "\n",
-        "predicted_y_cv = cross_val_predict(treeClassfier, X, y, cv=5)\n",
+        "predicted_y_cv = cross_val_predict(treeClassfier, X, y, cv=10)\n",
         "\n",
         "accuracy_score(y, predicted_y_cv)"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -892,7 +892,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 34
         }
       ]
     },
@@ -901,11 +901,11 @@
       "metadata": {
         "id": "Hg-CGOiWYNlB",
         "colab_type": "code",
+        "outputId": "69c6bb83-3ddb-4992-d735-48820fecfdec",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d73de840-676d-4107-c57b-b892400db208"
+          "height": 35
+        }
       },
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
@@ -916,7 +916,7 @@
         "gridcv_treeClassfier = GridSearchCV(treeClassfier, parameters)\n",
         "gridcv_treeClassfier.fit(X,y).best_score_"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -928,7 +928,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 35
         }
       ]
     },
@@ -937,16 +937,16 @@
       "metadata": {
         "id": "zi_C7B9YYhFz",
         "colab_type": "code",
+        "outputId": "d790cdb8-26f9-4f66-91f1-a9590f09d745",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "2173dede-4b0e-4811-f9b9-88c4886cc1ff"
+          "height": 35
+        }
       },
       "source": [
         "gridcv_treeClassfier.fit(X,y).best_params_"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -958,7 +958,40 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kk4GxAnmcEdI",
+        "colab_type": "code",
+        "outputId": "62b5a386-cfb9-49c6-a855-6194a75a129a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "refined_treeClassfier = DecisionTreeClassifier(criterion = \"entropy\", max_depth = 5, min_impurity_split = 0.2, splitter= 'best', random_state = 0)\n",
+        "predicted_y_cv = cross_val_predict(refined_treeClassfier, X, y, cv=10)\n",
+        "\n",
+        "accuracy_score(y, predicted_y_cv)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9701149425287356"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
         }
       ]
     },
@@ -967,18 +1000,18 @@
       "metadata": {
         "id": "zJn5cYxdYUh0",
         "colab_type": "code",
+        "outputId": "b405f3a7-b23e-4c14-a474-718a4f933ebb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 976
-        },
-        "outputId": "8ab52e21-2b15-4676-dbe0-2bebcf4dcff6"
+          "height": 986
+        }
       },
       "source": [
         "from sklearn import tree\n",
         "\n",
         "tree.plot_tree(treeClassfier)"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1030,7 +1063,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 41
         },
         {
           "output_type": "display_data",
