--- a/04_Prove_Assignment_Part3.ipynb
+++ b/04_Prove_Assignment_Part3.ipynb
@@ -6,7 +6,7 @@
       "name": "04 Prove : Assignment-Part3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOy50fGqBwGJRue5hOvMir7",
+      "authorship_tag": "ABX9TyNRKU/BrasOQyUOxJxxDeYE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "metadata": {
         "id": "hgts61JP1dCs",
         "colab_type": "code",
-        "outputId": "17609eda-20e0-4331-c103-6f3c1f14e119",
+        "outputId": "4889a8cc-da94-4754-9d4b-beb7f6db81e9",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -54,20 +54,22 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from google.colab import files\n",
+        "\n",
+        "# ignore the warning message\n",
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
         "file = files.upload()"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-3b2542fd-36fb-4299-ab80-10147e0fdb9c\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-3b2542fd-36fb-4299-ab80-10147e0fdb9c\">\n",
+              "     <input type=\"file\" id=\"files-fde25989-140e-4c2c-9944-9de0b18a2575\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-fde25989-140e-4c2c-9944-9de0b18a2575\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -95,18 +97,19 @@
       "metadata": {
         "id": "1rGYLzpJ1ZJ6",
         "colab_type": "code",
-        "outputId": "7ab95844-b62b-4182-ca4b-a2b6e85d07a6",
+        "outputId": "dfdcd30d-4248-4080-cfc1-fe426789b034",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
         }
       },
       "source": [
+        "# Load data with missing value defined (?)\n",
         "voter = pd.read_csv(\"house-votes-84.data\", na_values= [\"?\"], header= None, skipinitialspace= True)\n",
         "voter.columns = [i for i in range(1, 18)]\n",
         "voter.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +269,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 2
         }
       ]
     },
@@ -275,16 +278,18 @@
       "metadata": {
         "id": "vcZNr3R84bA5",
         "colab_type": "code",
-        "outputId": "e2857227-21f0-49e1-9abb-7639304376ba",
+        "outputId": "7f788df9-048a-4278-ed25-251dfbc5358d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 341
+          "height": 336
         }
       },
       "source": [
+        "# Show the missing value with percentage of total\n",
+        "\n",
         "voter.isna().sum(axis = 0)/voter.shape[0] * 100"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +318,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 3
         }
       ]
     },
@@ -322,16 +327,17 @@
       "metadata": {
         "id": "UOf9yveiS6Iq",
         "colab_type": "code",
-        "outputId": "d11941cf-e3a4-4995-d466-102a8a72df9b",
+        "outputId": "9968ddd2-a229-4485-ec87-bf9f97cf6577",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 341
+          "height": 336
         }
       },
       "source": [
+        "# All of data consist of object (Discrete attributes)\n",
         "voter.dtypes"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +366,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 4
         }
       ]
     },
@@ -369,13 +375,14 @@
       "metadata": {
         "id": "QhMfqW_1VFmF",
         "colab_type": "code",
-        "outputId": "7a25b4e0-9675-46d4-f047-f7c3fc802191",
+        "outputId": "4dccfbaf-712f-4a04-e147-e3d6da203a0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 341
+          "height": 336
         }
       },
       "source": [
+        "# Imputation with most frequent value (Categorical data)\n",
         "from sklearn.impute import SimpleImputer\n",
         "\n",
         "imp = SimpleImputer(strategy = \"most_frequent\")\n",
@@ -384,7 +391,7 @@
         "\n",
         "voter.isna().sum(axis = 0)"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -413,7 +420,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 5
         }
       ]
     },
@@ -422,22 +429,23 @@
       "metadata": {
         "id": "lumZG7chTBE6",
         "colab_type": "code",
-        "outputId": "4e6d98cf-f1e0-4064-bccb-e6ab9295408c",
+        "outputId": "8632d9d5-b1e8-4468-8db4-8526edd0199f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 197
         }
       },
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
         "\n",
+        "# change the categorical value into numeric value (0,1) with label encoding (Yes or No)\n",
         "label = LabelEncoder()\n",
         "\n",
         "voter = voter.apply(label.fit_transform)\n",
         "\n",
         "voter.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +605,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 6
         }
       ]
     },
@@ -625,10 +633,10 @@
       "metadata": {
         "id": "t64SotHCXajk",
         "colab_type": "code",
-        "outputId": "069777e4-46b7-4bb0-d7c9-d2a80f7fd506",
+        "outputId": "708185f7-f514-429e-fa1a-368b182ac644",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
@@ -642,7 +650,7 @@
         "accuracy_score(y_test, predicted_y)\n",
         "# treeClassfier.score(X_test, y_test)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +662,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 8
         }
       ]
     },
@@ -663,16 +671,17 @@
       "metadata": {
         "id": "Q2wZf9XiX_nv",
         "colab_type": "code",
-        "outputId": "fef7eee6-965d-48e8-804e-305d28fa18a9",
+        "outputId": "4a363838-f7e8-4365-8678-00bfd92c835c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 269
+          "height": 265
         }
       },
       "source": [
+        "# Get default parameter\n",
         "treeClassfier.get_params()"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +706,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 9
         }
       ]
     },
@@ -706,7 +715,7 @@
       "metadata": {
         "id": "12c57NL-YD0i",
         "colab_type": "code",
-        "outputId": "264e618f-0720-4dd4-d63f-115391228625",
+        "outputId": "46f86184-b41f-4a2d-a94a-2dcbb1febc1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -716,7 +725,7 @@
         "predict_y_proba = treeClassfier.predict_proba(X_test)\n",
         "predict_y_proba"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +867,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 10
         }
       ]
     },
@@ -867,20 +876,21 @@
       "metadata": {
         "id": "rytAWUmlYJX9",
         "colab_type": "code",
-        "outputId": "9d3b549e-26c8-4034-c4e6-0a27e6670fc1",
+        "outputId": "df9d8e55-5473-4678-a98d-6ed889c56b1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
         "from sklearn.model_selection import cross_val_predict\n",
         "\n",
+        "# cross validation with original data\n",
         "predicted_y_cv = cross_val_predict(treeClassfier, X, y, cv=10)\n",
         "\n",
         "accuracy_score(y, predicted_y_cv)"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -892,7 +902,42 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dfbaj9a68AKo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4b656855-adc6-4a7a-a403-44e25df0406c"
+      },
+      "source": [
+        "from sklearn.model_selection import cross_val_predict\n",
+        "\n",
+        "# cross validation with train data\n",
+        "predicted_y_train_cv = cross_val_predict(treeClassfier, X_train, y_train, cv=10)\n",
+        "\n",
+        "accuracy_score(y_train, predicted_y_train_cv)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9539473684210527"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
         }
       ]
     },
@@ -901,13 +946,14 @@
       "metadata": {
         "id": "Hg-CGOiWYNlB",
         "colab_type": "code",
-        "outputId": "69c6bb83-3ddb-4992-d735-48820fecfdec",
+        "outputId": "34e83ef8-c0b4-4fb1-d80c-04bf001cddc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
+        "# Using gridsearch to find out the best parameter and pruning\n",
         "from sklearn.model_selection import GridSearchCV\n",
         "\n",
         "parameters = {'splitter': ('best', 'random'),\n",
@@ -916,7 +962,7 @@
         "gridcv_treeClassfier = GridSearchCV(treeClassfier, parameters)\n",
         "gridcv_treeClassfier.fit(X,y).best_score_"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -928,7 +974,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 13
         }
       ]
     },
@@ -937,16 +983,16 @@
       "metadata": {
         "id": "zi_C7B9YYhFz",
         "colab_type": "code",
-        "outputId": "d790cdb8-26f9-4f66-91f1-a9590f09d745",
+        "outputId": "5eb51b57-f702-479e-cb4b-4bcff60e20ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
         "gridcv_treeClassfier.fit(X,y).best_params_"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -958,7 +1004,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 14
         }
       ]
     },
@@ -967,10 +1013,10 @@
       "metadata": {
         "id": "Kk4GxAnmcEdI",
         "colab_type": "code",
-        "outputId": "62b5a386-cfb9-49c6-a855-6194a75a129a",
+        "outputId": "1a505553-bf9d-4af7-b405-55e1df73d568",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
@@ -979,7 +1025,7 @@
         "\n",
         "accuracy_score(y, predicted_y_cv)"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -991,7 +1037,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 15
         }
       ]
     },
@@ -1000,18 +1046,19 @@
       "metadata": {
         "id": "zJn5cYxdYUh0",
         "colab_type": "code",
-        "outputId": "b405f3a7-b23e-4c14-a474-718a4f933ebb",
+        "outputId": "5ec6726d-4b36-45c9-ceea-c9c9ea009697",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 986
+          "height": 976
         }
       },
       "source": [
+        "# Tree visualization\n",
         "from sklearn import tree\n",
         "\n",
         "tree.plot_tree(treeClassfier)"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1063,7 +1110,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 16
         },
         {
           "output_type": "display_data",
