--- a/04_Prove_Assignment_Part2.ipynb
+++ b/04_Prove_Assignment_Part2.ipynb
@@ -6,7 +6,7 @@
       "name": "04 Prove : Assignment-Part2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPgjh6ub11Y9dqinjKImetO",
+      "authorship_tag": "ABX9TyPb4YRNvNObHL4s23gfR6zO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "\n",
         "file = files.upload()"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -100,6 +100,7 @@
         }
       },
       "source": [
+        "# Ignore the warning message\n",
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
@@ -108,7 +109,7 @@
         "# set column name\n",
         "iris.head()"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,7 +215,7 @@
       "source": [
         "iris.dtypes"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -247,9 +248,10 @@
         }
       },
       "source": [
+        "# NA handling\n",
         "iris.isna().sum(axis = 0)"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +313,7 @@
         "accuracy_score(y_test, predicted_y)\n",
         "# treeClassfier.score(X_test, y_test)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -332,16 +334,16 @@
       "metadata": {
         "id": "p18OCzZvzXEs",
         "colab_type": "code",
+        "outputId": "95d052aa-9c88-4d0c-c4f6-eb29f59d9667",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "95d052aa-9c88-4d0c-c4f6-eb29f59d9667"
+        }
       },
       "source": [
         "treeClassfier.get_params()"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -375,17 +377,17 @@
       "metadata": {
         "id": "Z_e8YyTKy8GL",
         "colab_type": "code",
+        "outputId": "8ccd2aec-7f16-44ab-e165-77e187d1f5bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 816
-        },
-        "outputId": "8ccd2aec-7f16-44ab-e165-77e187d1f5bc"
+        }
       },
       "source": [
         "predict_y_proba = treeClassfier.predict_proba(X_test)\n",
         "predict_y_proba"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +465,7 @@
         "\n",
         "accuracy_score(y, predicted_y_cv)"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,11 +486,11 @@
       "metadata": {
         "id": "LeoBkpWw0ISz",
         "colab_type": "code",
+        "outputId": "55a92800-9afc-49be-c3d3-19041befebbf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "55a92800-9afc-49be-c3d3-19041befebbf"
+        }
       },
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
@@ -499,7 +501,7 @@
         "gridcv_treeClassfier = GridSearchCV(treeClassfier, parameters)\n",
         "gridcv_treeClassfier.fit(X,y).best_score_"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,7 +542,7 @@
         "graph.write_png('diabetes.png')\n",
         "Image(graph.create_png())"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,18 +564,18 @@
       "metadata": {
         "id": "fq55uw-jxsTH",
         "colab_type": "code",
+        "outputId": "12568f01-cb25-4686-e306-9dba9c6701fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 478
-        },
-        "outputId": "12568f01-cb25-4686-e306-9dba9c6701fb"
+        }
       },
       "source": [
         "from sklearn import tree\n",
         "\n",
         "tree.plot_tree(treeClassfier)"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
